--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -51,6 +51,75 @@ body {
   display: block;
 }
 
+.leaflet-popup-content p.popup__text {
+  font-size: 15px;
+  margin: 0;
+}
+
+
+.legend-hed {
+  margin: 0;
+  padding: 5px 5px 5px 0;
+  text-align: left;
+  font-size: 15px;
+  text-transform: uppercase;
+  line-height: 1.5;
+}
+
+.legend__note {
+  margin: 0;
+}
+
+.legend__note--left {
+  float: left;
+}
+
+.legend__note--right {
+  float: right;
+}
+
+aside.legend {
+  padding: 6px 0px;
+  font-size: 15px;
+  font-family: sans-serif;
+  background: white;
+  background: rgba(255,255,255,0.8);
+  border-radius: 5px;
+  transform: translateZ(0);
+  z-index: 999;
+  position: static;
+  width: 100%;
+  max-width: 400px;
+  ul.scale {
+    clear: both;
+    font-family: @df-sans;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    overflow: auto;
+    padding-bottom: 8px;
+    li {
+      display: inline-block;
+      line-height: 14px;
+      margin-bottom: 2px;
+      padding-right: 5px;
+      width: 100% / @legend-length;
+      &:last-child {
+        padding-right: 0;
+      }
+    }
+    .block {
+      width: 100%;
+      height: 12px;
+      vertical-align: text-top;
+      display: inline-block;
+    }
+    p {
+      margin: 0;
+      text-align: center;
+      width: 100%;
+    }
+  }
+}
+
 @import "leaflet-tweaks";
-@import "legend";
-@import "popup";
