add google sheets task that uses oauth, add full demographics data to map popup

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -51,11 +51,17 @@ body {
   display: block;
 }
 
+.popup__hed {
+  margin-bottom: 10px;
+}
 .leaflet-popup-content p.popup__text {
   font-size: 15px;
   margin: 0;
 }
-
+.leaflet-popup-content p.popup__text--small {
+  font-size: 14px;
+  margin: 0;
+}
 
 .legend-hed {
   margin: 0;
@@ -85,6 +91,7 @@ aside.legend {
   background: white;
   background: rgba(255,255,255,0.8);
   border-radius: 5px;
+  margin: auto;
   transform: translateZ(0);
   z-index: 999;
   position: static;
