--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -65,9 +65,10 @@ body {
 
 .legend-hed {
   margin: 0;
-  padding: 5px 5px 5px 0;
+  padding: 0;
   text-align: left;
   font-size: 15px;
+  text-align: center;
   text-transform: uppercase;
   line-height: 1.5;
 }
